# mcvotd

./: README.md  pyproject.toml  test.env
src/mcvotd/: __init__.py  main.py  votd.py  votd_types.py
